# tinymole

./: .envrc  .gitignore  LICENSE  Makefile  README.md  conftest.py  flake.nix  pyproject.toml  run_perf5.sh
.github/workflows/: ci.yml
data/: README.md  ignis_10m.txt  substitution_rules.json  test_wordlist.txt
docs/: benchmarks.md  dev-benchmarks.md  write_up.md
results/: benchmark.csv  cracker_bench.txt  cracker_bench_hard.txt  cracker_comparison_1m.txt  hyperfine.csv  hyperfine.md  hyperfine_run.txt  latency_percentiles.txt  perf_1m.txt  perf_naive.txt  perf_prob.txt  perf_stdmap.txt  perf_tinyptr.txt  plot_benchmarks.py  thread_scaling_1m.txt
scripts/: run_perf.sh
src/cpp/: bench_cracker.cpp  bench_latency.cpp  bench_lookup.cpp  build_stats.hpp  cracker.cpp  cracker.hpp  cracker_bench.cpp  hash_table.cpp  hash_table.hpp  hash_table_naive.cpp  hash_table_naive.hpp  hash_table_prob.cpp  hash_table_prob.hpp  hash_table_stdmap.cpp  hash_table_stdmap.hpp  main.cpp  perf_counters.hpp  perf_naive.cpp  perf_prob.cpp  perf_stdmap.cpp  perf_tinyptr.cpp  tiny_ptr.hpp
src/cpp/bench/: bench_cracker.cpp  bench_latency.cpp  bench_lookup.cpp  perf_naive.cpp  perf_prob.cpp  perf_stdmap.cpp  perf_tinyptr.cpp
src/python/: build_candidates.py  frequency_analysis.py  merge_wordlists.py  plot_benchmarks.py  plot_results.py  tui.py  weakpass_lookup.py
tests/: test_cracker.cpp  test_frequency_analysis.py  test_hash_table.cpp  test_hash_table_naive.cpp  test_hash_table_prob.cpp  test_hash_table_stdmap.cpp  test_merge_wordlists.py  test_tiny_ptr.cpp  test_weakpass_lookup.py
(+13 files in other folders)
